@@ -1,3 +1,10 @@
+2007-11-12  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/stmt.c, lib/oci8/oci8.rb: add OCI8::Cursor#column_metadata.
+	* ext/oci8/metadata.c, ext/oci8/oci8.h, ext/oci8/stmt.c: Change
+	   the lifetime of OCI8::Metadata::Base. It depended on the connection,
+	   but now it depends on what it describes. For example OCI8::cursor
+	   for OCI8::Cursor#column_metadata.
+
 2007-11-11  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/oci8.c, lib/oci8/metadata.rb, test/test_datetime.rb:
 	   suppress warnings 'instance variable @xxxx not initialized' when
